--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,4 @@ theme: jekyll-theme-cayman
 
 title: Welcome to Eric Schmiel's homepage!
 
-description: I'm learning hown to use Github and might use this as a way to keep a devlog. 
-At the very least it will be a handy way to get more familiar with Github and Jekyll. 
-One more buzzword for my resume!
+description: I'm learning hown to use Github and might use this as a way to keep a devlog. At the very least it will be a handy way to get more familiar with Github and Jekyll. One more buzzword for my resume!
